# michi

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN_SYSTEM.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
specs/20260517-1716-michi-poc/: GEMINI_BRIEF.md  PHASES.md  RUST_GUIDELINES.md  SESSION.md  SPEC.md  UI_DESIGN.md
specs/20260517-1716-michi-poc/templates/: .gitignore  Cargo.toml  bootstrap.sh
specs/20260517-1716-michi-poc/templates/src/: app.rs  main.rs
specs/20260517-1716-michi-poc/templates/src/state/: mod.rs
src/: app.rs  claude_config.rs  claude_sessions.rs  docker.rs  lib.rs  main.rs  port_alloc.rs  port_detector.rs  resource_monitor.rs  system.rs  theme.rs  worker.rs  workspace_prep.rs
src/git/: mod.rs  status.rs  worktree.rs
src/state/: job.rs  mod.rs  persistence.rs  workspace.rs
src/terminal/: mod.rs
src/ui/: mod.rs  new_job_modal.rs
